# startup-core-info

./: .gitignore  Cargo.toml  README.md
adapters/markdown_adapter/: Cargo.toml
adapters/markdown_adapter/src/: lib.rs
adapters/sqlite_adapter/: Cargo.toml
adapters/sqlite_adapter/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: application.rs  domain.rs  lib.rs  ports.rs  utils.rs
discord_crawler/: README.md  background.js  content.js  database.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
