[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sti-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core = { path = "../core" }
sqlite_adapter = { path = "../../adapters/sqlite_adapter" }
markdown_adapter = { path = "../../adapters/markdown_adapter" }

